# VPDisk

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
include/: Builder.h  DiskVP.h  FAISSBatch.h  Similarities.h  disk_vp_node_header.h  mmapFile.h  vectorhash.h
include/bktree/: BKTReeHeader.h  BKTreeDisk.h  PrimaryIndexInformation.h
include/vptree/: Builder.h  DiskVP.h
src/: Builder.cpp  DiskVP.cpp  FAISSBatch.cpp  Similarities.cpp  mmapFile.cpp
src/bktree/: BKTReeHeader.cpp  BKTreeDisk.cpp
src/vptree/: Builder.cpp  DiskVP.cpp  FAISSBatch.cpp
submodules/math/: MortonLUT.h
